# fprime-azure-threadx

./: CMakeLists.txt  Main.cpp  README.md  fprime-azure-threadx.cmake  settings.ini
LedBlinker/: CMakeLists.txt  LedBlinker.fpp  LedBlinker.hpp  LedBlinkerComponentImpl.cpp  LedBlinkerComponentImpl.hpp  LedBlinkerLinux.cpp  LedBlinkerNucleo.cpp
NucleoBlink/: CMakeLists.txt  settings.ini
NucleoBlink/LedBlinker/: CMakeLists.txt  LedBlinker.cpp  LedBlinker.hpp  LedBlinkerComponentAi.xml  LedBlinkerLinux.cpp  LedBlinkerNucleo.cpp
NucleoBlink/Top/: CMakeLists.txt  Components.hpp  Main.cpp  NucleoSchedContexts.hpp  NucleoTopologyAppAi.xml  Topology.cpp
NucleoBlink_Top/: CMakeLists.txt  Components.hpp  NucleoSchedContexts.hpp  NucleoTopologyDefs.cpp  NucleoTopologyDefs.hpp  Topology.cpp  instances.fpp  topology.fpp
Os/ThreadX/: Directory.cpp  File.cpp  FileSystem.cpp  InterruptLock.cpp  IntervalTimer.cpp  Log.cpp  Mutex.cpp  Queue.cpp  Task.cpp  WatchdogTimer.cpp
STM32/: CMakeLists.txt
STM32/STM32CubeH7/: CMakeLists.txt
STM32/STM32IDE/: CMakeLists.txt
STM32/STM32IDE/Common/: system_stm32h7xx_dualcore_boot_cm4_cm7.c
cmake/platform/: Nucleo-ThreadX.cmake
cmake/toolchain/: stm32h745zi-cm7-threadx.cmake
config/: AcConstants.fpp  AcConstants.ini  ActiveLoggerImplCfg.hpp  FpConfig.hpp
fprime-nucleo/NucleoDrv/HardwareRateDriver/: CMakeLists.txt  HardwareRateDriver.cpp  HardwareRateDriver.fpp  HardwareRateDriver.hpp  HardwareRateDriverArduino.cpp  HardwareRateDriverComponentAi.xml  HardwareRateDriverComponentImpl.cpp  HardwareRateDriverComponentImpl.hpp  HardwareRateDriverLinux.cpp  HardwareRateDriverNucleo.cpp
fprime-nucleo/NucleoDrv/SerialDriver/: CMakeLists.txt  SerialDriver.cpp  SerialDriver.fpp  SerialDriver.hpp  SerialDriverArduino.cpp  SerialDriverComponentAi.xml  SerialDriverComponentImpl.cpp  SerialDriverComponentImpl.hpp  SerialDriverLinux.cpp  (+1 more)
fprime-nucleo/NucleoOs/: CMakeLists.txt  File.cpp  FileSystem.cpp  Mutex.cpp  Queue.cpp  StreamLog.cpp  StreamLog.hpp  Task.cpp  TaskId.cpp  Utils.cpp  WatchdogTimer.cpp
fprime-nucleo/NucleoTime/: CMakeLists.txt  DarwinTimeImpl.cpp  LinuxTimeImpl.cpp  NucleoTime.hpp  NucleoTimeImpl.cpp  NucleoTimeImpl.hpp  mod.mk
fprime-nucleo/NucleoTypes/: GenericLogAssert.cpp  StandardTypes.hpp
(+342 files in other folders)
